added a picture to my project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>
         Publishing new page:
     </h1>
-    
+    <img src="car.jpg" alt="">
 </body>
 <script src="script.js">
 </script>
